{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 28,
  "lineage": "fc82ccb8-f14b-a310-c081-1c70b57189d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:internet-gateway/igw-057e1e5bd7129e457",
            "id": "igw-057e1e5bd7129e457",
            "owner_id": "454809578403",
            "tags": {
              "Name": "eks-istanbul-igw",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-igw",
              "auto-delete": "no"
            },
            "vpc_id": "vpc-08593b30bf1b0b23c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:route-table/rtb-0a5ea944bd3d27805",
            "id": "rtb-0a5ea944bd3d27805",
            "owner_id": "454809578403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057e1e5bd7129e457",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-istanbul-public-rt",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-public-rt",
              "auto-delete": "no"
            },
            "timeouts": null,
            "vpc_id": "vpc-08593b30bf1b0b23c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cp_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098c7333e6cd4b9e3",
            "route_table_id": "rtb-0a5ea944bd3d27805",
            "subnet_id": "subnet-05864f506a8262a22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.public",
            "aws_subnet.cp_a",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cp_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f296bea70fc97d5b",
            "route_table_id": "rtb-0a5ea944bd3d27805",
            "subnet_id": "subnet-0e086b9b0605ccdc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.public",
            "aws_subnet.cp_c",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "istanbul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b99a00cf6e4c250",
            "route_table_id": "rtb-0a5ea944bd3d27805",
            "subnet_id": "subnet-0378596f6b4863894"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.eks",
            "aws_route_table.public",
            "aws_subnet.istanbul",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "31.223.101.216/32"
            ],
            "description": "Allow HTTP from my IP",
            "from_port": 80,
            "id": "sgrule-2439792365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c3b2e2b01385369",
            "security_group_rule_id": "sgr-09665ea4fdbe4d112",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.istanbul",
            "aws_iam_role.cluster",
            "aws_iam_role_policy_attachment.cluster",
            "aws_subnet.cp_a",
            "aws_subnet.cp_c",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodeport_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "31.223.101.216/32"
            ],
            "description": "Allow NodePort range from my IP",
            "from_port": 30000,
            "id": "sgrule-1307793920",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06c3b2e2b01385369",
            "security_group_rule_id": "sgr-00c82beb019bbc22d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.istanbul",
            "aws_iam_role.cluster",
            "aws_iam_role_policy_attachment.cluster",
            "aws_subnet.cp_a",
            "aws_subnet.cp_c",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cp_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:subnet/subnet-05864f506a8262a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05864f506a8262a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454809578403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-istanbul-cp-euc1a",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-cp-euc1a",
              "auto-delete": "no"
            },
            "vpc_id": "vpc-08593b30bf1b0b23c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cp_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:subnet/subnet-0e086b9b0605ccdc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e086b9b0605ccdc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454809578403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-istanbul-cp-euc1c",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-cp-euc1c",
              "auto-delete": "no"
            },
            "vpc_id": "vpc-08593b30bf1b0b23c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "istanbul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:subnet/subnet-0378596f6b4863894",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1-ist-1a",
            "availability_zone_id": "euc1-ist1-az1",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0378596f6b4863894",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454809578403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-istanbul-workers-istanbul",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-workers-istanbul",
              "auto-delete": "no"
            },
            "vpc_id": "vpc-08593b30bf1b0b23c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:454809578403:vpc/vpc-08593b30bf1b0b23c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-01388d0779a1f950a",
            "default_route_table_id": "rtb-0c96770ee233023b1",
            "default_security_group_id": "sg-0d536e9b10e0c8ceb",
            "dhcp_options_id": "dopt-08b577609bb955b16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08593b30bf1b0b23c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c96770ee233023b1",
            "owner_id": "454809578403",
            "tags": {
              "Name": "eks-istanbul-vpc",
              "auto-delete": "no"
            },
            "tags_all": {
              "Name": "eks-istanbul-vpc",
              "auto-delete": "no"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}